<resources>
    <string name="app_name">Order Management App</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>

    <string name="main_menu">Main Menu</string>
    <string name="product_list">Products List</string>
    <string name="manage_requisitions">Manage Requisitions</string>

    <!--    new Order strings-->
    <string name="site_manager">Site Manager</string>
    <string name="location">Location</string>
    <string name="delivery_notes">Delivery Notes</string>
    <string name="attach_document">Attach Document</string>
    <string name="new_order">New Order</string>
    <string name="upload">Upload</string>
    <string name="add_product_details">Add Product Details</string>
    <!--    new Order strings-->

    <!--    add product details string-->
    <string name="add_products">Add Products</string>
    <string name="supplier">Supplier</string>
    <string name="product_code">Product Code</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="unit_price">Unit Price</string>
    <string name="qty">Qty.</string>
    <string name="add_product">Add Product</string>
    <!--    add product details string-->

    <!--    product list strings-->
    <string name="save">Save</string>
    <string name="get_approval">Get Approval</string>
    <string name="approve">Approve</string>
    <string name="total">Total</string>
    <!--    product list strings-->

    <!--    manage requisitions strings-->
    <string name="search">Search</string>
    <string name="search_orders">Search Orders</string>
    <string name="view_orders">View Orders</string>
    <!--    manage requisitions strings-->

    <!--    view orders strings-->
    <string name="order_save">Save</string>
    <string name="complete">Complete</string>
    <string name="order">Order</string>
    <!--    view orders strings-->

    <!-- enquiries Strings -->
    <string name="enquiries_view_list">Order List</string>
    <string name="add_enquiry">Add Enquiry</string>
    <string name="orderID">Order ID</string>
    <string name="enquiry">Enquiry Details</string>
    <string name="loading">Loading...</string>
</resources>